# rust-incubator-1

./: .gitignore  README.md  diesel.toml
3_ecosystem/: Cargo.toml
3_ecosystem/3_10_threads/: Cargo.toml
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml  urls.txt
3_ecosystem/3_11_async/src/: main.rs
3_ecosystem/3_12_web_db/: Cargo.toml
3_ecosystem/3_12_web_db/src/: dto.rs  endpoints.rs  lib.rs  main.rs  models.rs  schema.rs
3_ecosystem/3_1_testing/: Cargo.toml
3_ecosystem/3_1_testing/tests/: guess_the_number.rs
3_ecosystem/3_2_macro/: Cargo.toml
3_ecosystem/3_2_macro/src/: lib.rs  main.rs
3_ecosystem/3_3_date_time/: Cargo.toml
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml
3_ecosystem/3_4_regex_parsing/src/: main.rs
3_ecosystem/3_5_collections/: Cargo.toml
3_ecosystem/3_5_collections/src/: main.rs
3_ecosystem/3_6_serde/: Cargo.toml
3_ecosystem/3_6_serde/src/: main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml
3_ecosystem/3_7_rand_crypto/src/: main.rs
3_ecosystem/3_8_log/: Cargo.toml
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml  cli.yml
3_ecosystem/3_9_cmd_env_conf/src/: main.rs
3_ecosystem/migrations/2020-09-06-120848_create_users/: down.sql  up.sql
3_ecosystem/src/: config.rs  db.rs  main.rs  model.rs
3_ecosystem/src/auth/: handlers.rs  mod.rs  model.rs  password_utils.rs
3_ecosystem/src/db/: model.rs  repository.rs
3_ecosystem/src/graphql/: handler.rs  handlers.rs  mod.rs  model.rs
3_ecosystem/static/: index.html
(+24 files in other folders)
