[package]
name = "step_3"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid" ] }
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_with = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-files = "0.2.0"
actix-identity = "0.2.1"
once_cell = "1.4.1"
argonautica = "0.2.0"
futures = "0.3.5"
juniper = { git = "https://github.com/graphql-rust/juniper", path = "juniper"}
juniper_actix = { git = "https://github.com/graphql-rust/juniper", path = "juniper_actix" }
